style.css
/* Reset Margins */

* {
  margin: 0;
  font-family: GTB;
}

h1 {
  font-family: GTB, sans-serif;
}

/* Show Menu */

body:nth-child(odd){
  background-color: #101010;
}

.show {
  display: flex !important;
}

.menu-div {
  display: none;
}

p {
  font-family: Arial, Helvetica, sans-serif;
}

.menu {
  display: none;
}

@font-face {
  font-family: GTB;
  src: url(fonts/galderglynn-titling.rg-regular.otf);
}

@font-face {
  font-family: GTBlite;
  src: url(fonts/galderglynn-titling.lt-regular.otf);
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: #101010;
}

/* Hero backround image */

.hero {
  background-image: url(img/UPPEr2.png);
  background-size: 100% 100%;
  padding: 1rem;
}

p {
  color: #f5f5f5;
  font-size: 1.5rem;
}

/* Donate Button */

.donate {
  width: 400px;
  height: 80px;
  font-size: 3rem;
  display: none;
}

a {
  border: 0px;
  background-color: #b81010;
  height: 3rem;
  width: 10rem;
  border-radius: 3rem;
  color: #f5f5f5;
display: flex;
justify-content: center;
align-items: center;
  cursor: pointer;
}

/* Div for the Picture and Slogan in hero section */

.picture-combine {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  bottom: 96px;
}

.formBtn{
  display: none;
}

.picture-combine img{
  width: 40%;
}

.donateBtn{
  width: 40rem;
height: 10rem;
font-size: 2rem;
}

.socials img:hover {
  filter: invert(50%);
  cursor: pointer;
}

a:hover {
  background-color: #a40f0f;
  box-shadow: 0px 0px black;
}
 
.logo {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.picture {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.picture h1 {
  font-size: 2rem;
}

h1 {
  color: #f5f5f5;
  font-size: 3rem;
}

h2 {
  font-size: 2rem;
  color: #f5f5f5;
}

#sevengoals {
  margin: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}

#sevengoals img {
  border-radius: 2rem;
  height: 100vh;
}

nav {
  display: flex;
  justify-content: center;
  gap: 16px;
}

nav a {
  margin-top: 10px;
}

#about {
  display: flex;
  justify-content: space-around;
  background-color: #202020;
  flex: 1
}


.about-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 40%;
}

.foundation {
  display: flex;
  justify-content: space-around;
  padding: 1rem;
  align-items: center;
  background-color: #202020;
}

.smaller{
  font-size: 1.3rem;
}

.cta {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-around;
  align-items: center;
  height: 80vh;
  background-image: url(img/lower.png);
  background-size: 100% 100%;
}

#contact {
  padding-top: 16px;
  padding-bottom: 16px;
  align-items: center;
  background-color: #202020;
  display: flex;
  justify-content: space-around;
}

#email:hover {
  color: rgb(202, 98, 98);
  cursor: pointer;
}

.reachout {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.socials {
  margin: 16px;
  display: flex;
  justify-content: space-evenly;
}

.donation {
  height: 50vh;
  width: 40vw;
  border-radius: 2rem;
}

.form {
  height: 50vh;
  width: 40vw;
  border-radius: 2rem;
}

.foundation-text {
  display: flex;
  flex-direction: column;
  width: 75%;
  gap: 1rem;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

@media screen and (max-width: 1500px) {
  #about{
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .about-text{width: 80%;}
  .foundation{    
    flex-direction: column;
    justify-content: center;
    align-items: center;
    }


}


/* Media Query for mobile devices */

@media screen and (max-width: 1000px) {
  .hero {
    background-image: none;
    padding: 0;
  }

  a {
    box-shadow: 0px 0px black;
  }

  .donate {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .formBtn{
    display: flex;
    text-align: center;
    height: 4rem;
    width: 12rem;
    padding: 1rem;
  }

/* Div for the Picture and Slogan in hero section */

  .picture-combine {
    position: static;
  }

  iframe {
    display: none;
  }

  nav {
    padding-bottom: 16px;
    display: none;
    gap: 2px;
    flex-direction: column;
    align-items: center;
    background-color: #101010cd;
    position: absolute;
    border-radius: 16px;
    width: 45%;
    left: 25%;
    top: 3rem;
  }

  nav a{
    background-color: #a40f0fe0;
  }
  

  #menu {
    margin-top: 16px;
    display: block;
    width: 32px;
  }

  .menu-div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .logo {
    background-image: url(img/UPPEr2.png);
    background-size: 100% 100%;
    flex-direction: column;
  }

  .logo a {
    margin-bottom: 16px;
  }

  .logo img {
    width: 60%;
  }

  .donate {
    width: 60%;
    font-size: 1.5rem;
  }

  .donateBtn{
    width: 10rem;
  height: 3rem;
  font-size: 1rem;
  }

  img {
    width: 80vw;
  }

  .picture {
    flex-direction: column;
    background-color: #202020;
  }

  .picture img {
    height: 20vh;
    width: auto;
  }

  .picture h1 {
    width: 80%;
    text-align: center;
  }

  #sevengoals{
    flex-direction: column;
  }

  #sevengoals img {
    height: auto;
    width: 80vw;
  }


  #about {
    flex-direction: column;
    align-items: center;
  }

  #about img {
    height: 20vh;
    width: auto;
  }

  .cta h2{
    text-align: center;
  }

  .cta{
    padding: 1rem;
    gap: 1rem;
  }

  .about-text {
    width: 75%;
    justify-content: center;
  }

  .about-text p {
    font-size: 1.5rem;
    margin-left: 10px;
  }

  .foundation {
    flex-direction: column;
    width: 90%;
    gap: 16px;
  }

  .foundation h1 {
    font-size: 2rem;
    text-align: center;
  }

  .foundation-text {
    width: 75%;
  }

  .foundation h2 {
    text-align: center;
  }

  .cta {
    flex-direction: column-reverse;
    height: 30vh;
  }

  .cta h2 {
    font-size: 2rem;
    width: 80%;
  }

  #contact {
    flex-direction: column;
  }

  .reachout p {
    font-size: 1rem;
  }
}

